// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`game actions test suite check state 1`] = `
Object {
  "type": "game/CHECK_STATE",
}
`;

exports[`game actions test suite end game 1`] = `
Object {
  "type": "game/END_GAME",
}
`;

exports[`game actions test suite init game default params 1`] = `
Object {
  "payload": Object {
    "board": Array [
      Array [],
    ],
    "options": Array [],
    "voidOption": undefined,
  },
  "type": "game/INIT_GAME",
}
`;

exports[`game actions test suite init game with params 1`] = `
Object {
  "payload": Object {
    "board": Array [
      Array [
        "B",
        "V",
      ],
      Array [
        "V",
        "B",
      ],
    ],
    "options": Array [
      "B",
      "V",
    ],
    "voidOption": "V",
  },
  "type": "game/INIT_GAME",
}
`;

exports[`game actions test suite set option with params 1`] = `
Object {
  "payload": Object {
    "option": "B",
  },
  "type": "game/SET_OPTION",
}
`;

exports[`game actions test suite set tile default params 1`] = `
Object {
  "payload": Object {
    "col": 0,
    "row": 0,
  },
  "type": "game/SET_TILE",
}
`;

exports[`game actions test suite set tile with params 1`] = `
Object {
  "payload": Object {
    "col": 1,
    "row": 1,
  },
  "type": "game/SET_TILE",
}
`;
